[tool.poetry]
name = "restaurant_reservation"
version = "0.1.0"
description = "REST API for reservations in a restaurant"
authors = ["Egor Gerimovich <cherund@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" },]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlmodel = "^0.0.24"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
